Fix color picker from being hidden on Calendar sidebar
Fixes CNVS-33887

Test Plan:
* Prerequisites: Log in as a user enrolled in at least 15 courses
* Click on 'Calendar' on the left nav
* Under the 'Calendars' on the right you will see the list of courses
* To the right of those should be the color picker
* The color picker should be clickable and not hidden under the scroll bar

Reviewed-on: https://gerrit.instructure.com/97675
Tested-by: Jenkins
QA-Review: Dan Sasaki
Product-Review: Chris Ward <cward@instructure.com>

--- a/app/stylesheets/pages/calendar/_sidebar.scss
+++ b/app/stylesheets/pages/calendar/_sidebar.scss
@@ -74,7 +74,6 @@
     list-style: none;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 335px;
     margin: 0;
     padding: 3px 0;
     cursor: pointer;
